add_subdirectory(timestep)
add_subdirectory(math)
add_subdirectory(materials)
add_subdirectory(io)
add_subdirectory(elements)
add_subdirectory(fem)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
add_library(digitalbrain $<TARGET_OBJECTS:timestep> $<TARGET_OBJECTS:math> $<TARGET_OBJECTS:materials> $<TARGET_OBJECTS:io> $<TARGET_OBJECTS:elements> $<TARGET_OBJECTS:fem>)
