SET(ex5_src Validation.cpp)

ADD_EXECUTABLE(Validation ${Validation_src})
ADD_DEPENDENCIES(Validation JsonCpp)

if(ENABLE_MPI)
  LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/lib ${CMAKE_BINARY_DIR}/third-party/parmetis-4.0.3/libparmetis)
  TARGET_LINK_LIBRARIES(ex5 FemTech parmetis  ${lapackblas_libraries} jsoncpp)
else()
  LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/lib)
  TARGET_LINK_LIBRARIES(ex5 FemTech)
endif(ENABLE_MPI)

file(INSTALL fine_brain_c064_v1.inp DESTINATION .)
file(INSTALL fine_brain_c288_v1.inp DESTINATION .)
file(INSTALL fine_brain_c380_v1.inp DESTINATION .)
file(INSTALL fine_brain_c393_v1.inp DESTINATION .)
file(INSTALL fine_brain_nahum_v1.inp DESTINATION .)
file(INSTALL fine_brain_panzer_v1.inp DESTINATION .)
file(INSTALL coarse_brain_c064.inp DESTINATION .)
file(INSTALL coarse_brain_c288.inp DESTINATION .)
file(INSTALL coarse_brain_c380.inp DESTINATION .)
file(INSTALL coarse_brain_c393.inp DESTINATION .)
file(INSTALL coarse_brain_nahum.inp DESTINATION .)
file(INSTALL coarse_brain_panzer.inp DESTINATION .)
file(INSTALL materials.dat DESTINATION .)
file(INSTALL input_C064-T4_hardyetal2007-ms2.json DESTINATION .)
file(INSTALL input_C288-T3_hardyetal2007-ms2.json DESTINATION .)
file(INSTALL input_C380-T1_hardyetal2007-ms2.json DESTINATION .)
file(INSTALL input_C380-T2_hardyetal2007-ms2.json DESTINATION .)
file(INSTALL input_C380-T3_hardyetal2007-ms2.json DESTINATION .)
file(INSTALL input_C380-T4_hardyetal2007-ms2.json DESTINATION .)
file(INSTALL input_C380-T6_hardyetal2007-ms2.json DESTINATION .)
file(INSTALL input_test_nahum.json DESTINATION .)
file(INSTALL input_v20dt30_Panzer.json DESTINATION .)
file(INSTALL input_v20dt60_Panzer.json DESTINATION .)
file(INSTALL input_v40dt30_Panzer.json DESTINATION .)
file(INSTALL input_v40dt60_Panzer.json DESTINATION .)
file(INSTALL input_C393-T3_hardyetal2007-ms2-fine.json DESTINATION .)
file(INSTALL input_C064-T4_hardyetal2007-ms2-fine.json DESTINATION .)
file(INSTALL input_C288-T3_hardyetal2007-ms2-fine.json DESTINATION .)
file(INSTALL input_C380-T1_hardyetal2007-ms2-fine.json DESTINATION .)
file(INSTALL input_C380-T2_hardyetal2007-ms2-fine.json DESTINATION .)
file(INSTALL input_C380-T3_hardyetal2007-ms2-fine.json DESTINATION .)
file(INSTALL input_C380-T4_hardyetal2007-ms2-fine.json DESTINATION .)
file(INSTALL input_C380-T6_hardyetal2007-ms2-fine.json DESTINATION .)
file(INSTALL input_C393-T3_hardyetal2007-ms2-fine.json DESTINATION .)
file(INSTALL input_test_nahum-fine.json DESTINATION .)
file(INSTALL input_v20dt30_Panzer-fine.json DESTINATION .)
file(INSTALL input_v20dt60_Panzer-fine.json DESTINATION .)
file(INSTALL input_v40dt30_Panzer-fine.json DESTINATION .)
file(INSTALL input_v40dt60_Panzer-fine.json DESTINATION .)
file(INSTALL updateOutputJson.py DESTINATION .)
file(INSTALL gnuplot.script DESTINATION .)
file(INSTALL gnuplotEnergy.script DESTINATION .)
file(INSTALL README.md DESTINATION .)
file(INSTALL simulationMovie.py DESTINATION .)
file(INSTALL mps95Movie.py DESTINATION .)
file(INSTALL addGraph.py DESTINATION .)
file(INSTALL test_validation.sh DESTINATION .)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/results)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/results/vtu)

# Define debugger options when working with windows & visual studio generator
# We set them here but could be passed as options if required
# We use a template for the same, replacing the options we need
if(WIN32 AND MSVC)
	set( DEBUG_COMMAND "C:\\Program Files\\Microsoft MPI\\Bin\\mpiexec.exe" )
	set( DEBUG_COMMAND_ARGUMENTS "-n 2 \"$(TargetPath)\" coarse_brain_c288.inp" )
	configure_file( template.vcxproj.user.in ${CMAKE_BINARY_DIR}/examples/V&V/V&V.vcxproj.user @ONLY )
endif()
